--- a/ppms_project/profilingApp/templates/activities/Admin Home2.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home2.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block dashboard %}
 <!-- Dashboard -->
-<div id="grid" class="container-fluid" style="padding:8%; margin-top:50px;">
+<div id="grid" class="container-fluid">
     <div class="container">
         <div class="container">
             <div class="row justify-content-between"> 
