--- a/ppms_project/profilingApp/templates/activities/Admin Validate BHW.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Validate BHW.html
@@ -47,8 +47,10 @@
                                     <td class="text-center">{{ bhw.bhw_barangay }}</td>
                                     <td style="text-align: center;">
                                         <div>
-                                            <a href="{% url 'unvalidated_profile' bhw.user.id %}"><button type="button" style="background-color: #188045; color: white;" class="btn">Validate</button></a>
-                                            <a href="{% url 'delete_profile' bhw.user.id %}"><button type="button" style="background-color: red; color: white;" class="btn">Remove</button></a>
+                                            <a href="{% url 'unvalidated_profile' bhw.user.id %}"><button type="button" style="background-color: #188045; color: #ffffff;" class="btn"  data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7" 
+                                                title="Validate"><i class="fa fa-lg fa-fw fa-user-check"></i></button></a>
+                                            <a href="{% url 'delete_profile' bhw.user.id %}"><button type="button" style="color: rgb(255, 0, 0);" class="btn"  data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7" 
+                                                title="Delete"><i class="fa fa-lg fa-fw fa-trash-alt"></i></button></a>
                                         </div>
                                     </td>
                                 </tr>
