--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -15,7 +15,7 @@
         <hr>
         </div>
         <div>
-            <section style="">
+            <section>
                 <div class="row">
                     <div class="col">
                         <div class="card">
